--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,21 @@
 server:
   port: 8080
+  compression:
+    enabled: true
+    mime-types: application/json
 
 spring:
   datasource:
-    url: jdbc:h2:mem:outsera
+    url: jdbc:h2:mem:outsera;DB_CLOSE_DELAY=-1;MODE=MySQL;CACHE_SIZE=65536
     username: sa
     password: password
     driverClassName: org.h2.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
   jpa:
     open-in-view: false
     hibernate:
